--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app">
+
     <uses-feature
         android:name="android.hardware.camera2"
-        android:required="true"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature
-        android:name="android.hardware.camera2.autofocus"/>
+        android:required="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera2.autofocus" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -23,7 +24,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App">
-
+        <activity android:name=".ShowCode.vanBanShow"></activity>
+        <activity android:name=".ShowCode.vitriShowCode" />
+        <activity android:name=".ShowCode.barcodeShow" />
+        <activity android:name=".ShowCode.wifiShowCode" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,7 +42,7 @@
 
         <activity
             android:name=".CodeScreen.taoQRViTri"
-            android:label="@string/title_activity_tao_q_r_vi_tri"></activity>
+            android:label="@string/title_activity_tao_q_r_vi_tri" />
         <activity android:name=".ShowCode.webXemMa" />
         <activity android:name=".ShowCode.webShowCode" />
         <activity android:name=".CodeScreen.taoBarcode" />
